# allocator-api2

./: CHANGELOG.md  COPYING  Cargo.toml  README.md
.github/workflows/: badge.yml  check-platforms.yml  check-targets.yml  check-toolchains.yml  lints.yml  security.yml
license/: APACHE  MIT
src/: alloc.rs  alloc2.rs  boxed.rs  core.rs  lib.rs  macros.rs  nightly.rs  raw_vec.rs  slice.rs
src/alloc/: alloc.rs  global.rs  mod.rs  system.rs
src/alloc2/: boxed.rs  mod.rs  raw_vec.rs
src/alloc2/vec/: cow.rs  drain.rs  into_iter.rs  mod.rs  partial_eq.rs  splice.rs
src/core/: alloc.rs
src/stable/: boxed.rs  macros.rs  mod.rs  raw_vec.rs  unique.rs
src/stable/alloc/: global.rs  mod.rs  system.rs
src/stable/vec/: cow.rs  drain.rs  in_place_collect.rs  in_place_drop.rs  into_iter.rs  mod.rs  partial_eq.rs  set_len_on_drop.rs  splice.rs
src/vec/: drain.rs  into_iter.rs  mod.rs  partial_eq.rs  splice.rs
tests/: Cargo.toml
tests/src/: lib.rs
