[package]
name = "allocator-api2"
version = "0.2.15"
edition = "2018"
authors = ["Zakarum <zaq.dev@icloud.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/allocator-api2"
homepage = "https://github.com/zakarumych/allocator-api2"
repository = "https://github.com/zakarumych/allocator-api2"
readme = "README.md"
description = "Mirror of Rust's allocator API"

[features]
alloc = []
std = ["alloc"]
default = ["std"]
nightly = []

[dependencies]
serde = { version = "1.0", optional = true }

[workspace]
members = ["tests"]
