[package]
name = "allocator-api2-tests"
version = "0.2.15"
edition = "2021"
description = "Tests for allocators that implement the allocator API"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/allocator-api2-tests"
homepage = "https://github.com/zakarumych/allocator-api2"
repository = "https://github.com/zakarumych/allocator-api2"

[features]
nightly = ["allocator-api2/nightly"]

[dependencies]
allocator-api2 = { version = "=0.2.18", path = ".." }
